# new_admin_panel_sprint_2

./: .flake8  .gitignore  pyproject.toml
01_docker_compose/: Dockerfile  docker-compose.yml
01_docker_compose/app/: requirements.txt
01_docker_compose/app/config/: settings.py
01_docker_compose/app/config/components/: database.py  installed_apps.py  static_media.py
01_docker_compose/app/docker_test/: settings.py
01_docker_compose/app/movies/: admin.py  models.py
01_docker_compose/app/movies/api/v1/: serializers.py  urls.py  views.py
01_docker_compose/app/movies/locale/en/LC_MESSAGES/: django.po
01_docker_compose/app/movies/migrations/: 0001_initial.py  0002_filmwork_file_path.py  0003_auto_20220328_1638.py
01_docker_compose/nginx/: nginx.conf  site.conf
02_django_api/config/: settings.py  urls.py
02_django_api/config/components/: installed_apps.py  middleware.py
02_django_api/movies/locale/ru/LC_MESSAGES/: django.po
02_django_api/movies/migrations/: 0004_alter_filmwork_options.py
